# youtube-transcript-summarizer

./: .env.example  AI_IMPLEMENTATION.md  BEDROCK_SETUP.md  CHANGELOG.md  LANGUAGE_SUPPORT.md  LICENSE  MANIFEST.in  MULTILINGUAL_FEATURES.md  MULTILINGUAL_UPDATE_SUMMARY.md  PKG-INFO  QUICKSTART.md  README.md  SOURCES.txt  bedrock_client.py  design.md  entry_points.txt  models.py  pyproject.toml  requirements.md  requirements.txt  requires.txt  setup.py  tasks.md  timestamp_formatter.py
src/: __init__.py  cli.py  file_writer.py  markdown_generator.py  orchestrator.py  summarizer.py  transcript_fetcher.py  url_validator.py
tests/: __init__.py  test_bedrock_client.py  test_cli.py  test_file_writer.py  test_markdown_generator.py  test_models.py  test_orchestrator.py  test_summarizer.py  test_timestamp_formatter.py  test_transcript_fetcher.py  test_url_validator.py
