[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcript-summarizer"
version = "1.0.0"
description = "AI-powered tool to fetch YouTube video transcripts in 25+ languages and generate summaries using AWS Bedrock (25+ models supported)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["youtube", "transcript", "summarizer", "video", "markdown", "aws", "bedrock", "ai", "nova", "claude", "llama", "mistral", "jamba", "cohere", "multilingual", "chinese", "spanish", "hindi", "arabic", "translation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "youtube-transcript-api>=0.6.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
youtube-summarizer = "src.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/youtube-transcript-summarizer"
Documentation = "https://github.com/yourusername/youtube-transcript-summarizer#readme"
Repository = "https://github.com/yourusername/youtube-transcript-summarizer"
"Bug Tracker" = "https://github.com/yourusername/youtube-transcript-summarizer/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
